contact form. meta details addedd

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
-
 @import url(https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,500i,600,600i,700,700i,800|Open+Sans:400,400i,600,600i,700,700i,800&display=swap);
 /* Typography
 ================================================== */
-html{
+html {
   scroll-behavior: smooth;
 }
 body {
@@ -27,7 +26,7 @@ h5,
 h6 {
   color: #212121;
   font-weight: 700;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased !important;
 }
@@ -48,14 +47,14 @@ h3 {
   font-size: 24px;
   margin-bottom: 20px;
   text-transform: uppercase;
-  letter-spacing: -.5px;
+  letter-spacing: -0.5px;
 }
 
 h4 {
   font-size: 18px;
   line-height: 28px;
   text-transform: uppercase;
-  letter-spacing: -.2px;
+  letter-spacing: -0.2px;
 }
 
 h5 {
@@ -106,7 +105,7 @@ a:visited {
 
 a {
   color: inherit;
-  transition: .2s ease;
+  transition: 0.2s ease;
 }
 
 a:hover {
@@ -210,7 +209,7 @@ a:focus {
   background-color: rgba(0, 46, 91, 0.8);
   z-index: 0;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
@@ -225,7 +224,7 @@ a:focus {
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 0;
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
@@ -292,6 +291,12 @@ a:focus {
   .section-sub-title {
     font-size: 28px;
   }
+
+  .logoDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Column title */
@@ -357,7 +362,7 @@ hr {
   border-top: 1px solid;
   height: initial;
   margin-bottom: 1rem;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 blockquote {
@@ -380,7 +385,7 @@ blockquote.text-center:before {
   left: 50%;
   top: 10px;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 blockquote.text-right {
@@ -400,7 +405,7 @@ blockquote:before {
   font-family: "Font Awesome 5 Free";
   position: absolute;
   font-size: 28px;
-  color: #E5E5E5;
+  color: #e5e5e5;
   top: 5px;
   left: 5px;
   font-weight: 700;
@@ -482,13 +487,14 @@ ul.list-check li:before {
   background: #f5f5f5 url(../images/crossword.png);
 }
 
-a[href^=tel] {
+a[href^="tel"] {
   color: inherit;
   text-decoration: none;
 }
 
 /* Button */
-.btn:active, .btn:focus {
+.btn:active,
+.btn:focus {
   box-shadow: none !important;
 }
 
@@ -532,7 +538,8 @@ a[href^=tel] {
   color: #fff;
 }
 
-.btn-primary:hover:active, .btn-primary:hover:focus,
+.btn-primary:hover:active,
+.btn-primary:hover:focus,
 .btn-dark:hover:active,
 .btn-dark:hover:focus,
 .btn-white.btn-primary:hover:active,
@@ -563,7 +570,7 @@ a[href^=tel] {
   background: #f5f5f5 url(../images/crossword.png);
 }
 
-a[href^=tel] {
+a[href^="tel"] {
   color: inherit;
   text-decoration: none;
 }
@@ -734,8 +741,8 @@ ul.navbar-nav > li.active > a {
 
 /*-- Logo --*/
 .logo img {
-  width: 82px;
-  height: 82px;
+  width: 66px;
+  height: 66px;
 }
 
 .header-two .logo img {
@@ -840,7 +847,7 @@ ul.top-info-box > li.nav-search {
 
 ul.top-info-box > li.nav-search:before {
   position: absolute;
-  content: '';
+  content: "";
   background: #ddd;
   left: 0;
   width: 1px;
@@ -962,7 +969,7 @@ ul.navbar-nav > li > a {
   text-rendering: optimizeLegibility;
   font-weight: 700 !important;
   text-transform: uppercase;
-  letter-spacing: -.2px;
+  letter-spacing: -0.2px;
   font-size: 14px;
   margin: 0;
   line-height: 40px;
@@ -1051,7 +1058,7 @@ ul.navbar-nav > li > a {
   line-height: normal;
   text-decoration: none;
   padding: 15px 0;
-  letter-spacing: .3px;
+  letter-spacing: 0.3px;
   border-bottom: 1px solid #e5e5e5;
   color: #333333;
 }
@@ -1373,12 +1380,12 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   z-index: 5;
   display: inline-block;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   background-color: transparent;
   opacity: 0;
   filter: alpha(opacity=0);
   text-shadow: none;
-  transition: all .25s ease;
+  transition: all 0.25s ease;
   padding: 0;
   outline: 0;
   border: 0;
@@ -1400,7 +1407,8 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   font-size: 12px;
 }
 
-.slick-dots li button:hover:before, .slick-dots .slick-dots li button:focus:before,
+.slick-dots li button:hover:before,
+.slick-dots .slick-dots li button:focus:before,
 .slick-dots li.slick-active button:before {
   opacity: 1;
   color: #caa10b;
@@ -1453,14 +1461,14 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   position: absolute;
   width: 100%;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 @media (max-width: 767px) {
   .box-slider-content {
     top: auto;
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     left: 20px;
     bottom: 20px;
     width: calc(100% - 40px);
@@ -1585,7 +1593,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 }
 
 .featured-tab .nav-tabs > li > a {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   background: #272d33;
   color: #fff;
   text-shadow: none;
@@ -1626,7 +1634,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   border-style: solid;
   border-color: #caa10b rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0);
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
 }
 
 .featured-tab .lead {
@@ -1865,6 +1873,10 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   .ts-service-info {
     margin-left: 15px;
   }
+
+  .logoText{
+    font-size: 30px;
+  }
 }
 
 .ts-service-info h3 {
@@ -1962,19 +1974,19 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 
 .shuffle-item .project-img-container img {
   -webkit-transform: perspective(1px) scale3d(1.1, 1.1, 1);
-          transform: perspective(1px) scale3d(1.1, 1.1, 1);
+  transform: perspective(1px) scale3d(1.1, 1.1, 1);
   transition: all 400ms;
 }
 
 .shuffle-item .project-img-container:hover img {
   -webkit-transform: perspective(1px) scale3d(1.15, 1.15, 1);
-          transform: perspective(1px) scale3d(1.15, 1.15, 1);
+  transform: perspective(1px) scale3d(1.15, 1.15, 1);
 }
 
 .shuffle-item .project-img-container:after {
   opacity: 0;
   position: absolute;
-  content: '';
+  content: "";
   top: 0;
   right: auto;
   left: 0;
@@ -1998,14 +2010,14 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   color: #fff;
   opacity: 0;
   -webkit-transform: perspective(1px) scale3d(0, 0, 0);
-          transform: perspective(1px) scale3d(0, 0, 0);
+  transform: perspective(1px) scale3d(0, 0, 0);
   transition: all 400ms;
 }
 
 .shuffle-item .project-img-container:hover .gallery-popup .gallery-icon {
   opacity: 1;
   -webkit-transform: perspective(1px) scale3d(1, 1, 1);
-          transform: perspective(1px) scale3d(1, 1, 1);
+  transform: perspective(1px) scale3d(1, 1, 1);
 }
 
 .shuffle-item .project-img-container .project-item-info {
@@ -2022,19 +2034,30 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 .shuffle-item .project-img-container .project-item-info-content {
   opacity: 0;
   -webkit-transform: perspective(1px) translate3d(0, 15px, 0);
-          transform: perspective(1px) translate3d(0, 15px, 0);
+  transform: perspective(1px) translate3d(0, 15px, 0);
   transition: all 400ms;
 }
 
-.shuffle-item .project-img-container .project-item-info-content .project-item-title {
+.shuffle-item
+  .project-img-container
+  .project-item-info-content
+  .project-item-title {
   font-size: 20px;
 }
 
-.shuffle-item .project-img-container .project-item-info-content .project-item-title a {
+.shuffle-item
+  .project-img-container
+  .project-item-info-content
+  .project-item-title
+  a {
   color: #fff;
 }
 
-.shuffle-item .project-img-container .project-item-info-content .project-item-title a:hover {
+.shuffle-item
+  .project-img-container
+  .project-item-info-content
+  .project-item-title
+  a:hover {
   color: #caa10b;
 }
 
@@ -2051,7 +2074,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 .shuffle-item .project-img-container:hover .project-item-info-content {
   opacity: 1;
   -webkit-transform: perspective(1px) translate3d(0, 0, 0);
-          transform: perspective(1px) translate3d(0, 0, 0);
+  transform: perspective(1px) translate3d(0, 0, 0);
 }
 
 .general-btn .btn-primary:hover {
@@ -2077,7 +2100,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 
 .project-item:hover img {
   -webkit-transform: scale(1.1, 1.1);
-          transform: scale(1.1, 1.1);
+  transform: scale(1.1, 1.1);
 }
 
 .project-item-content {
@@ -2093,7 +2116,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   top: -70px;
   right: 0;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .project-slide .owl-nav > div {
@@ -2176,7 +2199,7 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
   font-weight: 700;
   background-color: #333;
   color: #fff;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .accordion-group .card-header .btn[aria-expanded="true"] {
@@ -2207,9 +2230,9 @@ ul.navbar-nav > li.header-get-a-quote:hover > a:after {
 
 .clients-logo img {
   -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  filter: grayscale(100%);
   -webkit-filter: gray;
-          filter: gray;
+  filter: gray;
 }
 
 /* Testimonial
@@ -2590,7 +2613,7 @@ img.testimonial-thumb {
   color: #fff;
 }
 
-.whatsappIcon{
+.whatsappIcon {
   animation: bounce 0.6s infinite alternate;
   -webkit-animation: bounce 0.6s infinite alternate;
 }
@@ -2653,8 +2676,6 @@ img.testimonial-thumb {
   }
 }
 
-
-
 /* Sub Pages
 ================================================== */
 /*-- Title border --*/
@@ -2700,7 +2721,7 @@ img.testimonial-thumb {
   width: 100%;
   z-index: 1;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .banner-heading {
@@ -2734,10 +2755,10 @@ img.testimonial-thumb {
   z-index: 5;
   display: inline-block;
   -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  transform: translateY(-50%);
   background-color: transparent;
   text-shadow: none;
-  transition: all .25s ease;
+  transition: all 0.25s ease;
   padding: 0;
   outline: 0;
   border: 0;
@@ -2807,15 +2828,15 @@ img.testimonial-thumb {
 
 .partner-logo img {
   transition: 350ms;
-  opacity: .6;
+  opacity: 0.6;
   -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  filter: grayscale(100%);
 }
 
 .partner-logo:hover img {
   opacity: 1;
   -webkit-filter: grayscale(0%);
-          filter: grayscale(0%);
+  filter: grayscale(0%);
 }
 
 #partners-carousel .partner-logo {
@@ -2848,7 +2869,7 @@ img.testimonial-thumb {
   height: 37px;
   width: 37px;
   border-radius: 4px;
-  transition: .3s;
+  transition: 0.3s;
   z-index: 6;
 }
 
@@ -2859,16 +2880,16 @@ img.testimonial-thumb {
 
 .team-slide .carousel-control.left {
   -webkit-transform: translateX(calc(-50% - 25px));
-          transform: translateX(calc(-50% - 25px));
+  transform: translateX(calc(-50% - 25px));
 }
 
 .team-slide .carousel-control.right {
   -webkit-transform: translateX(calc(-50% + 25px));
-          transform: translateX(calc(-50% + 25px));
+  transform: translateX(calc(-50% + 25px));
 }
 
 .team-slide .carousel-control.slick-disabled {
-  opacity: .4;
+  opacity: 0.4;
 }
 
 .team-slide .carousel-control.slick-disabled:hover {
@@ -3248,7 +3269,7 @@ label {
 .author-info h3 span {
   font-size: 12px;
   color: #999;
-  border-left: 1px solid #AFAFAF;
+  border-left: 1px solid #afafaf;
   padding-left: 10px;
   margin-left: 10px;
   font-weight: 500;
@@ -3559,7 +3580,7 @@ label {
   font-weight: 700;
 }
 
-.ts-service-box-img img{
+.ts-service-box-img img {
   width: 67px;
   height: inherit;
 }
@@ -3598,26 +3619,31 @@ label {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .slider-height2 {
+  .slider-height2 {
     height: 350px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .slider-height2 {
+  .slider-height2 {
     height: 260px;
   }
 }
 
 @media (max-width: 575px) {
-    .slider-height2 {
+  .slider-height2 {
     height: 260px;
   }
 }
 
 .slider-area {
   margin-top: -1px;
-  background-image: linear-gradient(0deg, rgb(21 11 11 / 38%), rgb(27 21 21 / 54%)),url('../images/banner/banner1.jpg');
+  background-image: linear-gradient(
+      0deg,
+      rgb(21 11 11 / 38%),
+      rgb(27 21 21 / 54%)
+    ),
+    url("../images/banner/banner1.jpg");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
@@ -3645,28 +3671,28 @@ label {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .slider-area .hero__caption h1 {
+  .slider-area .hero__caption h1 {
     font-size: 70px;
     line-height: 1.2;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .slider-area .hero__caption h1 {
+  .slider-area .hero__caption h1 {
     font-size: 50px;
     line-height: 1.2;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .slider-area .hero__caption h1 {
+  .slider-area .hero__caption h1 {
     font-size: 35px;
     line-height: 1.4;
   }
 }
 
 @media (max-width: 575px) {
-    .slider-area .hero__caption h1 {
+  .slider-area .hero__caption h1 {
     font-size: 29px;
     line-height: 1.5;
   }
@@ -3705,27 +3731,27 @@ label {
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-    .slider-area .video-icon {
+  .slider-area .video-icon {
     right: 48px;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .slider-area .video-icon {
+  .slider-area .video-icon {
     right: 63px;
   }
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .slider-area .video-icon {
+  .slider-area .video-icon {
     right: 82px;
   }
 }
 
 @media (max-width: 575px) {
-    .slider-area .video-icon {
+  .slider-area .video-icon {
     right: 180px;
-    bottom: 27px!important;
+    bottom: 27px !important;
     top: 68%;
   }
 }
@@ -3754,7 +3780,7 @@ label {
 }
 
 @media only screen and (min-width: 576px) and (max-width: 767px) {
-    .slider-area .video-icon a {
+  .slider-area .video-icon a {
     width: 60px;
     height: 60px;
     line-height: 60px;
@@ -3762,7 +3788,7 @@ label {
 }
 
 @media (max-width: 575px) {
-    .slider-area .video-icon a {
+  .slider-area .video-icon a {
     width: 60px;
     height: 60px;
     line-height: 60px;
@@ -3785,7 +3811,7 @@ label {
 }
 
 .slider-area .video-icon a.btn-icon::before {
-  content: '';
+  content: "";
   display: inline-block;
   position: absolute;
   top: -2px;
@@ -3794,7 +3820,8 @@ label {
   right: -2px;
   border-radius: inherit;
   border: 1px solid #fff;
-  -webkit-animation: btnIconRipple 2s cubic-bezier(0.23, 1, 0.32, 1) both infinite;
+  -webkit-animation: btnIconRipple 2s cubic-bezier(0.23, 1, 0.32, 1) both
+    infinite;
   animation: btnIconRipple 2s cubic-bezier(0.23, 1, 0.32, 1) both infinite;
 }
 
@@ -3871,13 +3898,14 @@ label {
   }
 }
 
-.logoText{
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: bold;
+.logoText {
+  font-size: 30px;
+  font-family: "Font Awesome 5 Brands";
+  font-weight: 800;
+  color: #000;
 }
 
-.gallery-image{
+.gallery-image {
   width: -webkit-fill-available !important;
   height: 350px !important;
 }
