--- a/css/style.css
+++ b/css/style.css
@@ -578,8 +578,8 @@ a[href^="tel"] {
 /* Top Bar
 ================================================== */
 .top-bar {
-  padding: 8px 0;
-  background: #ebebeb;
+  padding: 18px 0;
+  background: #ebebebda;
   position: relative;
 }
 
